--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-fastapi
-slowapi
-sqlalchemy
-psycopg2-binary
-pydantic
-pydantic_sqlalchemy
-uvicorn
+flask==2.1.3
+flask-sqlalchemy==2.5.1
+pymysql==1.0.2
+sqlalchemy==1.4.47
+pydantic==1.10.2
+pydantic_sqlalchemy==0.0.9
+cryptography==39.0.1
+werkzeug==2.1.2
+flask-smorest==0.39.0
+flask-marshmallow==0.14.0
