--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,25 @@ services:
       MYSQL_DATABASE: mydatabase
     ports:
       - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
   server:
     build: .
-    command: sh -c "/wait-for-it.sh db:3306 -- flask run --host=0.0.0.0 --port=80"
+    command: flask run --host=0.0.0.0 --port=80
     volumes:
       - .:/app
     ports:
       - "8000:80"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+
+volumes:
+  mysql_data:
+    driver: local
