--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-flask==2.1.3
-flask-sqlalchemy==2.5.1
-pymysql==1.0.2
-sqlalchemy==1.4.47
-pydantic==1.10.2
-pydantic_sqlalchemy==0.0.9
 cryptography==39.0.1
-werkzeug==2.1.2
-flask-smorest==0.39.0
 flask-marshmallow==0.14.0
+flask-smorest==0.39.0
+flask-sqlalchemy==2.5.1
+flask==2.1.3
+loguru==0.7.2
+pydantic_sqlalchemy==0.0.9
+pydantic==1.10.2
+pymysql==1.0.2
+pyyaml==6.0.1
+sqlalchemy==1.4.47
+werkzeug==2.1.2
