--- a/logging_config.yaml
+++ b/logging_config.yaml
@@ -1,21 +1,26 @@
 version: 1
+disable_existing_loggers: False
 formatters:
-  detailed:
-    format: "%(asctime)s %(name)s %(levelname)s %(message)s"
-
+  simple:
+    format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
 handlers:
   console:
     class: logging.StreamHandler
     level: DEBUG
-    formatter: detailed
+    formatter: simple
     stream: ext://sys.stdout
-
   file:
-    class: logging.FileHandler
+    class: logging.handlers.RotatingFileHandler
     level: DEBUG
-    formatter: detailed
-    filename: /logs/server.log
-
+    formatter: simple
+    filename: logs/server.log
+    maxBytes: 10485760 # 10MB
+    backupCount: 3
+loggers:
+  app:
+    level: DEBUG
+    handlers: [console, file]
+    propagate: no
 root:
   level: DEBUG
   handlers: [console, file]
