--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,12 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    command: --wait_timeout=28800 --interactive_timeout=28800
+    deploy:
+      resources:
+        limits:
+          cpus: "1.0"
+          memory: "1g"
 
   server:
     build: .
