https is working for bothunter the servlet doesn't trust the bot hunter, so temporarily set verify to False

--- a/.dockerignore
+++ b/.dockerignore
@@ -40,5 +40,9 @@ dist/
 .vscode/
 
 # Ignore any other sensitive or irrelevant files
-secrets/
 node_modules/
+secrets/
+
+# Except these files
+!secrets/cert.pem
+!secrets/key.pem
