--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ flask-sqlalchemy==2.5.1
 flask==2.1.3
 pydantic_sqlalchemy==0.0.9
 pydantic==1.10.2
-pymysql==1.0.2
+pytest>=8.2.0
+pytest-asyncio>=0.23.7
 pyyaml==6.0.1
 sqlalchemy==1.4.47
 werkzeug==2.1.2
