--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ pytest>=8.2.0
 pytest-asyncio>=0.23.7
 pyyaml==6.0.1
 sqlalchemy==1.4.47
+twitchio==2.9.1
 werkzeug==2.1.2
 requests==2.31.0
 oauthlib==3.2.2
