--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flask==2.1.3
 pydantic_sqlalchemy==0.0.9
 pydantic==1.10.2
 pytest>=8.2.0
+pytest-mock>=3.14.0
 pytest-asyncio>=0.23.7
 pyyaml==6.0.1
 sqlalchemy==1.4.47
