--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,17 @@ aiomysql==0.2.0
 cryptography==39.0.1
 flask-marshmallow==0.14.0
 flask-smorest==0.39.0
-flask-sqlalchemy==2.5.1
-flask==2.1.3
-pydantic_sqlalchemy==0.0.9
-pydantic==1.10.2
-pytest>=8.2.0
-pytest-mock>=3.14.0
-pytest-asyncio>=0.23.7
-pyyaml==6.0.1
-sqlalchemy==1.4.47
-twitchio==2.9.1
-werkzeug==2.1.2
-requests==2.31.0
+flask-sqlalchemy==3.0.0
+flask[async]==2.3.2
 oauthlib==3.2.2
+pytest-asyncio==0.23.7
+pytest-mock==3.14.0
+pytest>=8.2.0
+pyyaml==6.0.1
 requests-oauthlib==2.0.0
+requests==2.31.0
+sqlalchemy==2.0.31
+sqlmodel==2.0.31
+twitchio==2.9.1
+uvicorn==0.29.0
+werkzeug==2.3.3
