--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ flask-marshmallow==0.14.0
 flask-smorest==0.39.0
 flask-sqlalchemy==2.5.1
 flask==2.1.3
-pydantic_sqlalchemy==0.0.9
-pydantic==1.10.2
+marshmallow==3.21.2
+marshmallow-sqlalchemy==1.0.0
 pytest>=8.2.0
 pytest-mock>=3.14.0
 pytest-asyncio>=0.23.7
