--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ oauthlib==3.2.2
 pytest-asyncio==0.23.7
 pytest-mock==3.14.0
 pytest>=8.2.0
+pytz>=2024.1
 pyyaml==6.0.1
 requests-oauthlib==2.0.0
 requests==2.31.0
