--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
 aiomysql==0.2.0
 cryptography==39.0.1
-flask-marshmallow==0.14.0
-flask-smorest==0.39.0
-flask-sqlalchemy==3.0.0
-flask[async]==2.3.2
+fastapi
 oauthlib==3.2.2
 pytest-asyncio==0.23.7
 pytest-mock==3.14.0
