--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiomysql==0.2.0
 aiosqlite==0.20.0
 cryptography==39.0.1
 fastapi
+flask==2.3.2
 oauthlib==3.2.2
 pytest-asyncio==0.23.7
 pytest-mock==3.14.0
