secret insert+update are working correctly tests MOSTLY work, one has a bad state carryover I don't understand

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,6 +74,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      test-db:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:443/test"]
       interval: 30s
