split logs into db.log and server.log more readable logging_config.yaml as well

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,8 @@ services:
       REDIS_DB_INDEX: 0
     volumes:
       - .:/server
-      - ./logs:/logs
+      - ./logs/server.log:/logs/server.log
+      - ./logs/db.log:/logs/db.log
     ports:
       - "443:443"
     secrets:
