--- a/logging_config.yaml
+++ b/logging_config.yaml
@@ -1,26 +1,42 @@
 version: 1
 disable_existing_loggers: False
+
 formatters:
-  simple:
+  detailed:
     format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+  custom:
+    (): server.utils.log_util.CustomFormatter
+    format: "%(asctime)s - %(levelname)s - %(module)s - %(funcName)s - %(message)s"
+
 handlers:
   console:
     class: logging.StreamHandler
     level: DEBUG
-    formatter: simple
+    formatter: detailed
     stream: ext://sys.stdout
-  file:
-    class: logging.handlers.RotatingFileHandler
+
+  file_handler:
+    class: logging.FileHandler
+    filename: "logs/server.log"
+    formatter: detailed
     level: DEBUG
-    formatter: simple
-    filename: logs/server.log
-    maxBytes: 10485760 # 10MB
-    backupCount: 3
+
+  sqlalchemy_file_handler:
+    class: logging.FileHandler
+    filename: "logs/db.log"
+    formatter: detailed
+    level: DEBUG
+
 loggers:
-  app:
+  "":
+    handlers:
+      - console
+      - file_handler
     level: DEBUG
-    handlers: [console, file]
-    propagate: no
-root:
-  level: DEBUG
-  handlers: [console, file]
+    propagate: True
+
+  sqlalchemy.engine:
+    handlers:
+      - sqlalchemy_file_handler
+    level: DEBUG
+    propagate: False
