--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       DATABASE_NAME: lurkerbothunterdb
       DB_SERVICE_NAME: db
       DB_PORT: 3306
-      REDIS_HOST: localhost
+      REDIS_HOST: redis
       REDIS_PORT: 6379
       REDIS_DB_INDEX: 0
     volumes:
