IN PROGRESS debugging channel_listener flow - Added local logging that works in debug mode and echos to pytest in terminal. - More robust channel_listener flow - Clearer names for stuff and sporadic clarifying comments - Leaning towards too much logging

--- a/logging_config_local.yaml
+++ b/logging_config_local.yaml
@@ -19,13 +19,13 @@ handlers:
     class: logging.FileHandler
     formatter: detailed
     level: DEBUG
-    filename: ./logs/server.log
+    filename: ./debug_logs/server_debug.log
 
   sqlalchemy_file_handler:
     class: logging.FileHandler
     formatter: detailed
     level: DEBUG
-    filename: ./logs/db.log
+    filename: ./debug_logs/db_debug.log
 
 loggers:
   "":
