--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       --port 443
       --ssl-keyfile /secrets/key.pem
       --ssl-certfile /secrets/cert.pem
+    restart: "no"
     environment:
       ENVIRONMENT: container
       LOCAL_TIMEZONE: America/New_York
